gemini api key fix

--- a/GenWeb_AI_backend/.env
+++ b/GenWeb_AI_backend/.env
@@ -1,2 +1,3 @@
 # Gemini API Key
-GEMINI_API_KEY=AIzaSyB-VMqapqCfdu67fHSsBvi91GFcWpdFYNo
+# GEMINI_API_KEY=AIzaSyDF-9vPTu7wB9y0JTZJRFci4jpspibWZjU
+GEMINI_API_KEY=AIzaSyCGS2ULO8z2cMRksXo0tQowVosP87h6BBI
